package internal.menu;

public interface IMenu {
    void mostrar();
}
