package internal.repositorio;

public class RepoVenta {
}
